@@ -5,14 +5,11 @@
 #include "RedWolf/lif/vulkan/BaseObject.hpp"
 #include "RedWolf/lif/vulkan/Interface.hpp"
 
+#include <vector>
+
 namespace rw
 {
    class RedWolfManager;
-}
-
-namespace rw::utils
-{
-   class Logger;
 }
 
 namespace rw::lif::vlk
@@ -44,7 +41,8 @@ namespace rw::lif::vlk
    private:
       GraphicsDevice& graphicsDevice_; /**< Logical device this swap chain is bound to. */
 
-      VkSwapchainKHR swapChain_{ VK_NULL_HANDLE }; /**< Raw swap chain handle. */
+      VkSwapchainKHR       swapChain_{ VK_NULL_HANDLE }; /**< Raw swap chain handle. */
+      std::vector<VkImage> images_;                      /**< Handles to the swap chain's images. */
    };
 } // namespace rw::lif::vlk
 
