@@ -38,6 +38,7 @@ Version 0.5.0
         - Add PhysicalDeviceManager class.
         - Add VersionInfo struct.
         - Add Vulkan BaseObject class.
+        - Add Vulkan ImageView class.
         - Fix Timer destructor.
         - Fix sign of the time of day in the DateTime structure.
         - Improve comments.
